--- a/AppAgent.html
+++ b/AppAgent.html
@@ -417,7 +417,11 @@
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/js/app.js"></script>
+  <script src="/assets/js/app-core.js"></script>
+  <script src="/assets/js/app-state.js"></script>
+  <script src="/assets/js/app-utils.js"></script>
+  <script src="/assets/js/app-research.js"></script>
+  <script src="/assets/js/app-ui.js"></script>
 </body>
 
 </html>
