--- a/AppAgent.html
+++ b/AppAgent.html
@@ -147,6 +147,9 @@
       <div class="search-box">
         <textarea id="userQuery" class="search-input" rows="1" placeholder="Ask a deep technical question..."
           onkeydown="if(event.key==='Enter' && !event.shiftKey){ event.preventDefault(); runPipeline(); }"></textarea>
+        <input id="filePicker" type="file" multiple style="display:none"
+          accept=".txt,.md,.markdown,.json,.csv,.tsv,.html,.xml,.js,.ts,.py,.java,.c,.cpp,.pdf,image/*" />
+        <div id="attachmentTray" class="attachment-tray" style="display:none"></div>
 
         <div class="search-focus-row">
           <button type="button" class="focus-btn active" onclick="setSearchFocus('all', this)">🌐 All</button>
@@ -158,7 +161,10 @@
 
         <div class="search-actions">
           <div class="d-flex gap-2">
-            <button type="button" class="btn-action d-md-none" onclick="collapseChat()">⤬</button>
+            <button type="button" class="btn-action" onclick="collapseChat()" title="Minimize chat">⤬</button>
+            <button type="button" class="btn-action" onclick="toggleChatCompact()" title="Compact/Expanded size">↔ Size</button>
+            <button type="button" class="btn-action" onclick="toggleChatDock()" title="Dock left/right">⇄ Dock</button>
+            <button type="button" class="btn-action" onclick="openFilePicker()" title="Attach files or images">📎 Attach</button>
             <select id="searchMode" class="btn-action" title="Execution Mode">
               <option value="auto" selected>Auto</option>
               <option value="quick">Quick</option>
@@ -357,6 +363,12 @@
               <div class="form-check form-switch small text-muted">
                 <input class="form-check-input" type="checkbox" id="expFastContextFetch">
                 <label class="form-check-label">Fast Copilot URL context fetch</label>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-check form-switch small text-muted">
+                <input class="form-check-input" type="checkbox" id="autoTranslatePrompts" checked>
+                <label class="form-check-label">Translate prompts to English before model calls</label>
               </div>
             </div>
           </div>
