--- a/AppAgent.html
+++ b/AppAgent.html
@@ -190,9 +190,31 @@
               <option value="deep">Deep</option>
             </select>
             <select id="language" class="btn-action">
-              <option value="auto" selected>🌐 Auto</option>
+              <option value="en" selected>English</option>
+              <option value="auto">🌐 Auto</option>
               <option value="he">Hebrew</option>
-              <option value="en">English</option>
+              <option value="es">Spanish</option>
+              <option value="fr">French</option>
+              <option value="de">German</option>
+              <option value="it">Italian</option>
+              <option value="pt">Portuguese</option>
+              <option value="ru">Russian</option>
+              <option value="uk">Ukrainian</option>
+              <option value="ar">Arabic</option>
+              <option value="tr">Turkish</option>
+              <option value="fa">Persian (Farsi)</option>
+              <option value="hi">Hindi</option>
+              <option value="bn">Bengali</option>
+              <option value="ur">Urdu</option>
+              <option value="zh">Chinese (Simplified)</option>
+              <option value="ja">Japanese</option>
+              <option value="ko">Korean</option>
+              <option value="id">Indonesian</option>
+              <option value="vi">Vietnamese</option>
+              <option value="th">Thai</option>
+              <option value="pl">Polish</option>
+              <option value="nl">Dutch</option>
+              <option value="sv">Swedish</option>
             </select>
             <select id="chatModel" class="btn-action chat-model-select" title="Quick model switch">
               <option value="">Model</option>
@@ -310,9 +332,31 @@
             <div class="col-md-6">
               <label class="form-label small text-muted">Response Language</label>
               <select id="languageModal" class="form-select form-select-sm bg-dark text-white border-secondary">
-                <option value="he" selected>Hebrew (Manual)</option>
-                <option value="en">English (Manual)</option>
+                <option value="en" selected>English</option>
                 <option value="auto">Auto-Detect</option>
+                <option value="he">Hebrew</option>
+                <option value="es">Spanish</option>
+                <option value="fr">French</option>
+                <option value="de">German</option>
+                <option value="it">Italian</option>
+                <option value="pt">Portuguese</option>
+                <option value="ru">Russian</option>
+                <option value="uk">Ukrainian</option>
+                <option value="ar">Arabic</option>
+                <option value="tr">Turkish</option>
+                <option value="fa">Persian (Farsi)</option>
+                <option value="hi">Hindi</option>
+                <option value="bn">Bengali</option>
+                <option value="ur">Urdu</option>
+                <option value="zh">Chinese (Simplified)</option>
+                <option value="ja">Japanese</option>
+                <option value="ko">Korean</option>
+                <option value="id">Indonesian</option>
+                <option value="vi">Vietnamese</option>
+                <option value="th">Thai</option>
+                <option value="pl">Polish</option>
+                <option value="nl">Dutch</option>
+                <option value="sv">Swedish</option>
               </select>
             </div>
             <div class="col-md-4">
