--- a/AppAgent.html
+++ b/AppAgent.html
@@ -232,7 +232,7 @@
               <label class="form-check-label small" for="fastFollowups">Fast Copilot</label>
             </div>
           </div>
-          <div class="d-flex gap-2 align-items-center">
+          <div class="d-flex gap-2 align-items-center search-submit-cluster">
             <div id="busyPill" class="badge rounded-pill text-bg-secondary mono"
               style="font-size: 0.65rem; transition: all 0.3s;">IDLE</div>
             <div id="pipelineModeBadge" class="badge rounded-pill text-bg-dark mono"
