Add live agent run indicator, clickable citations, and media infinite scroll

--- a/AppAgent.html
+++ b/AppAgent.html
@@ -248,6 +248,10 @@
     </form>
     <div id="statusText" class="text-center mt-3"
       style="font-size: 0.8rem; color: var(--text-muted); font-weight: 500;">Ready for mission.</div>
+    <div id="runStageIndicator" class="run-stage-indicator" aria-live="polite">
+      <span class="run-stage-spinner"></span>
+      <span id="runStageText">Idle</span>
+    </div>
   </div>
 
   <!-- Settings Layer (Overlay) -->
