Lock prompt enhancement actions and improve running phase text

--- a/AppAgent.html
+++ b/AppAgent.html
@@ -163,7 +163,7 @@
         <div id="attachmentTray" class="attachment-tray" style="display:none"></div>
         <div class="search-tools-row">
           <button type="button" class="btn-action" onclick="openFilePicker()" title="Attach files or images">📎 Attach</button>
-          <button type="button" class="btn-action" onclick="improvePromptDraft()" title="Improve current prompt">✨ Enhance Prompt</button>
+          <button id="improvePromptBtn" type="button" class="btn-action" onclick="improvePromptDraft()" title="Improve current prompt">✨ Enhance Prompt</button>
           <button type="button" class="btn-action" id="micBtn">🎤 Voice</button>
           <span id="voiceState" class="small text-muted align-self-center"
             style="font-family: var(--font-mono); font-size: 0.7rem;">mic off</span>
