--- a/AppAgent.html
+++ b/AppAgent.html
@@ -380,6 +380,36 @@
                 <option value="sv">Swedish</option>
               </select>
             </div>
+            <div class="col-md-6">
+              <label class="form-label small text-muted">Enhance Prompt Output Language</label>
+              <select id="enhancePromptLanguage" class="form-select form-select-sm bg-dark text-white border-secondary">
+                <option value="en" selected>English (default)</option>
+                <option value="auto">Auto (same as input prompt)</option>
+                <option value="he">Hebrew</option>
+                <option value="es">Spanish</option>
+                <option value="fr">French</option>
+                <option value="de">German</option>
+                <option value="it">Italian</option>
+                <option value="pt">Portuguese</option>
+                <option value="ru">Russian</option>
+                <option value="uk">Ukrainian</option>
+                <option value="ar">Arabic</option>
+                <option value="tr">Turkish</option>
+                <option value="fa">Persian (Farsi)</option>
+                <option value="hi">Hindi</option>
+                <option value="bn">Bengali</option>
+                <option value="ur">Urdu</option>
+                <option value="zh">Chinese (Simplified)</option>
+                <option value="ja">Japanese</option>
+                <option value="ko">Korean</option>
+                <option value="id">Indonesian</option>
+                <option value="vi">Vietnamese</option>
+                <option value="th">Thai</option>
+                <option value="pl">Polish</option>
+                <option value="nl">Dutch</option>
+                <option value="sv">Swedish</option>
+              </select>
+            </div>
             <div class="col-md-4">
               <label class="form-label small text-muted">Max Output Tokens</label>
               <input type="number" id="maxOutTokens"
