Add GitHub and YouTube focus modes via SearXNG domain-scoped queries

--- a/AppAgent.html
+++ b/AppAgent.html
@@ -200,6 +200,8 @@
           <button type="button" class="focus-btn active" onclick="setSearchFocus('all', this)">🌐 All</button>
           <button type="button" class="focus-btn" onclick="setSearchFocus('academic', this)">🎓 Academic</button>
           <button type="button" class="focus-btn" onclick="setSearchFocus('social', this)">💬 Social</button>
+          <button type="button" class="focus-btn" onclick="setSearchFocus('github', this)">🐙 GitHub</button>
+          <button type="button" class="focus-btn" onclick="setSearchFocus('youtube', this)">▶ YouTube</button>
           <button type="button" class="focus-btn" onclick="setSearchFocus('media', this)">🖼️ Media</button>
           <button type="button" class="focus-btn" onclick="setSearchFocus('writing', this)">✍️ Writing</button>
         </div>
