HF demo: use Ollama release binaries + Qwen3 small default + clear 2-interaction demo notice

--- a/hf-space/AppAgent.html
+++ b/hf-space/AppAgent.html
@@ -325,7 +325,7 @@
               <label class="form-label small text-muted">Active Model Name</label>
               <div class="input-group input-group-sm">
                 <select id="modelName" class="form-select bg-dark text-white border-secondary">
-                  <option value="gemma3:1b" selected>gemma3:1b (Space default)</option>
+                  <option value="qwen3:0.6b-q4_K_M" selected>qwen3:0.6b-q4_K_M (Space default)</option>
                 </select>
                 <button class="btn btn-outline-secondary" type="button" onclick="refreshModels()">Fetch</button>
               </div>
