HF Space: set default GGUF to Qwen3-0.6B PreSINQ Q4_K_S

--- a/hf-space/AppAgent.html
+++ b/hf-space/AppAgent.html
@@ -325,7 +325,7 @@
               <label class="form-label small text-muted">Active Model Name</label>
               <div class="input-group input-group-sm">
                 <select id="modelName" class="form-select bg-dark text-white border-secondary">
-                  <option value="qwen2.5-0.5b-instruct-q4_k_m" selected>qwen2.5-0.5b-instruct-q4_k_m (Space default)</option>
+                  <option value="qwen3-0.6b-presinq-q4_k_s" selected>qwen3-0.6b-presinq-q4_k_s (Space default)</option>
                 </select>
                 <button class="btn btn-outline-secondary" type="button" onclick="refreshModels()">Fetch</button>
               </div>
