--- a/hf-space/AppAgent.html
+++ b/hf-space/AppAgent.html
@@ -209,9 +209,7 @@
         <div class="search-actions">
           <div class="d-flex gap-2">
             <select id="searchMode" class="btn-action" title="Execution Mode">
-              <option value="auto" selected>Auto</option>
-              <option value="quick">Quick</option>
-              <option value="deep">Deep</option>
+              <option value="quick" selected>Quick</option>
             </select>
             <select id="mode" class="btn-action">
               <option value="speed">Speed</option>
@@ -304,11 +302,7 @@
             <div class="col-md-6">
               <label class="form-label small text-muted">Provider</label>
               <select id="provider" class="form-select form-select-sm bg-dark text-white border-secondary">
-                <option value="lmstudio">LM Studio</option>
                 <option value="ollama" selected>Ollama (Space default)</option>
-                <option value="openai">OpenAI</option>
-                <option value="anthropic">Anthropic</option>
-                <option value="gemini">Gemini</option>
               </select>
             </div>
             <div class="col-md-6">
@@ -325,7 +319,7 @@
               <label class="form-label small text-muted">Active Model Name</label>
               <div class="input-group input-group-sm">
                 <select id="modelName" class="form-select bg-dark text-white border-secondary">
-                  <option value="qwen3-0.6b-presinq-q4_k_s" selected>qwen3-0.6b-presinq-q4_k_s (Space default)</option>
+                  <option value="qwen3-0.6b-q4_0" selected>qwen3-0.6b-q4_0 (Space default)</option>
                 </select>
                 <button class="btn btn-outline-secondary" type="button" onclick="refreshModels()">Fetch</button>
               </div>
@@ -566,6 +560,13 @@
   </div>
 
 
+  <script>
+    window.__HF_SPACE_CONFIG = {
+      quickOnly: true,
+      singleProvider: "ollama",
+      singleModel: "qwen3-0.6b-q4_0"
+    };
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
