--- a/hf-space/AppAgent.html
+++ b/hf-space/AppAgent.html
@@ -319,7 +319,7 @@
               <label class="form-label small text-muted">Active Model Name</label>
               <div class="input-group input-group-sm">
                 <select id="modelName" class="form-select bg-dark text-white border-secondary">
-                  <option value="qwen3-0.6b-q4_0" selected>qwen3-0.6b-q4_0 (Space default)</option>
+                  <option value="qwen3-0.6b-q4_0:latest" selected>qwen3-0.6b-q4_0:latest (Space default)</option>
                 </select>
                 <button class="btn btn-outline-secondary" type="button" onclick="refreshModels()">Fetch</button>
               </div>
@@ -564,7 +564,7 @@
     window.__HF_SPACE_CONFIG = {
       quickOnly: true,
       singleProvider: "ollama",
-      singleModel: "qwen3-0.6b-q4_0"
+      singleModel: "qwen3-0.6b-q4_0:latest"
     };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
