fix(node settings): enforce external endpoint defaults (no internal proxy urls)

--- a/AppAgent.html
+++ b/AppAgent.html
@@ -314,12 +314,12 @@
             <div class="col-md-6">
               <label class="form-label small text-muted">LM Studio Base URL</label>
               <input id="lmBase" class="form-control form-control-sm bg-dark text-white border-secondary"
-                value="/lmstudio/v1" />
+                value="http://localhost:1234/v1" />
             </div>
             <div class="col-md-6">
               <label class="form-label small text-muted">Ollama Base URL</label>
               <input id="ollamaBase" class="form-control form-control-sm bg-dark text-white border-secondary"
-                value="/ollama/v1" />
+                value="http://localhost:11434/v1" />
             </div>
             <div class="col-md-6">
               <label class="form-label small text-muted">Active Model Name</label>
@@ -333,7 +333,7 @@
             <div class="col-12">
               <label class="form-label small text-muted">SearXNG Endpoint</label>
               <input id="searchUrl" class="form-control form-control-sm bg-dark text-white border-secondary"
-                value="/searxng/search" />
+                value="http://localhost:8394/search" />
             </div>
             <div class="col-md-6">
               <label class="form-label small text-muted">OpenAI API Key</label>
